# project-spring26-OmkarSonar24

./: .gitignore  README.md  bio.md  clustering.md  environment.yml  imp_notes.md  plan.md  proposal.md  pyproject.toml
capstone_dbt/: dbt_project.yml  profiles_template.yml
capstone_dbt/models/: sources.yml
capstone_dbt/models/marts/: mrt_customer_features.sql  mrt_mcc_categories.sql
capstone_dbt/seeds/: mcc_category_rules.csv
data/sample/: customers_sample.csv  mcc_mapping_labeled.csv  transactions_sample.csv
docs/: data_issues.md  data_summary.md  eda.html  index.html  insights.html  segments.html
docs/_file/data/: category_spend.fd132954.csv  daily_pattern.8ef23a2c.csv  demographics.6e7a1e25.csv  geo_spending.8f127e67.csv  hourly_pattern.4cc14a1d.csv  monthly_trend.1965293d.csv  segment_categories.153c59a8.csv  segment_geo.1e6eea48.csv  (+7 more)
docs/_observablehq/: theme-air,alt,wide.8a524e59.css
finsights-dashboard/: .gitignore  README.md  observablehq.config.js  package-lock.json
finsights-dashboard/src/: eda.md  index.md  insights.md  segments.md
notebooks/: 00_data_raw.ipynb  01_customers_eda.ipynb  01_data_cleaning.ipynb  02_data_loading.ipynb  02_transactions_eda.ipynb  03_data_customers_eda.ipynb  03_stakeholder_analysis.ipynb  04_clustering.ipynb  04_data_transactions_eda.ipynb  05_data_eda_plots.ipynb  05_features_selection.ipynb  06_feature_engineering.ipynb
presentations/class/: Checkin01.pptx  Checkin02.pptx  Checkin03.pptx
src/: config.py  create_sample_data.py  ingest_customers.py  ingest_transactions.py  load_db.py  mcc_labeler.py
(+16 files in other folders)
