[project]
name = "project-spring26-omkarsonar24"
version = "0.1.0"
description = "Customer spending intelligence system for Bangor Savings Bank (DS5500 Capstone)"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
